--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -2,7 +2,7 @@
     name: eslint
     entry: eslint
     language: node
-    'types': [javascript]
+    'types': [ts]
     args: []
     require_serial: false
     additional_dependencies: ["eslint@7.0.0-alpha.3"]
